Bug 389462 - columns don't reflow on resize r=roc